--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-languga: python
+language: python
 python:
     - "3.6"
 
@@ -9,4 +9,3 @@ before_script: pip install docker-compose
 
 script:
     - docker-compose run app sh -c "python manage.py test && flake8"
-    
